# homework1

.github/workflows/: cmake.yml  ip_filter.yml
part1/: CMakeLists.txt  main.cpp  test_version.cpp  versions.h.in
part2/: CMakeLists.txt  main.cpp
